--- a/index.html
+++ b/index.html
@@ -51,15 +51,23 @@
       padding-top: env(safe-area-inset-top);
     }
 
-    /* Standard iOS spring animation */
     .ios-transition {
       transition: all 0.4s cubic-bezier(0.17, 0.67, 0.16, 0.99);
     }
 
-    /* Active states for buttons */
     .ios-active:active {
       transform: scale(0.96);
       opacity: 0.7;
+    }
+
+    #loading-fallback {
+      position: fixed;
+      inset: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #F2F2F7;
+      z-index: 9999;
     }
   </style>
 <script type="importmap">
@@ -74,6 +82,15 @@
 </script>
 </head>
 <body>
-  <div id="root"></div>
+  <div id="root">
+    <div id="loading-fallback">
+      <div style="text-align: center;">
+        <div style="width: 40px; height: 40px; border: 4px solid #007AFF; border-top-color: transparent; border-radius: 50%; animation: spin 1s linear infinite; margin: 0 auto 16px auto;"></div>
+        <p style="color: #8E8E93; font-weight: 500; font-size: 14px;">Loading Vault...</p>
+      </div>
+    </div>
+  </div>
+  <style>@keyframes spin { to { transform: rotate(360deg); } }</style>
+  <script type="module" src="index.tsx"></script>
 </body>
 </html>
